--- a/package.json
+++ b/package.json
@@ -5,11 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "prisma generate",
     "dev": "nodemon src/index.ts",
-    "build": "prisma generate",
-    "vercel-build": "prisma generate && prisma migrate deploy",
-    "prisma:generate": "prisma generate",
     "format": "npx prettier src --write"
   },
   "keywords": [],
@@ -17,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.7",
@@ -28,7 +25,9 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
     "passport-jwt": "^4.0.1",
     "zod": "^3.22.2"
