--- a/.env.prod.example
+++ b/.env.prod.example
@@ -3,7 +3,7 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-DATABASE_URL="postgresql://postgres:hXPrx6oYw33pjctRe0ed@containers-us-west-191.railway.app:6512/railway"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres?schema=public"
 
 JWT_SECRET="mysecret123"
 
