--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "start": "pm2 start src/index.ts",
     "format": "npx prettier src --write"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.7",
@@ -26,6 +28,7 @@
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
