--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "pm2 start --interpreter none 'ts-node ./src/index.ts'",
+    "start": "nodemon src/index.ts",
     "format": "npx prettier src --write"
   },
   "keywords": [],
@@ -33,7 +33,6 @@
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
     "passport-jwt": "^4.0.1",
-    "pm2": "^5.3.0",
     "zod": "^3.22.2"
   },
   "prettier": {
