--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "nodemon src/index.ts",
+    "start": "ts-node dist/index.js",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
+    "build": "npm run clean && tsc -p .",
     "format": "npx prettier src --write"
   },
   "keywords": [],
@@ -33,6 +35,7 @@
     "express-rate-limit": "^6.10.0",
     "jsonwebtoken": "^9.0.2",
     "passport-jwt": "^4.0.1",
+    "rimraf": "^5.0.1",
     "zod": "^3.22.2"
   },
   "prettier": {
