update start script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.ts",
     "start": "ts-node dist/index.js",
     "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "build": "npm run clean && tsc -p .",
+    "build": "tsc -p .",
     "format": "npx prettier src --write"
   },
   "keywords": [],
