--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "nodemon src/index.ts",
     "start": "ts-node dist/index.js",
     "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "build": "tsc -p .",
-    "format": "npx prettier src --write"
+    "build": "npx tsc",
+    "format": "npm run clean && npx prettier src --write"
   },
   "keywords": [],
   "author": "",
