--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "ts-node dist/index.js",
-    "clean": "rimraf dist tsconfig.tsbuildinfo",
-    "build": "npm run clean && npx tsc",
+    "start": "node dist/index.js",
+    "build": "rimraf dist tsconfig.tsbuildinfo && tsc",
     "format": "npx prettier src --write"
   },
   "keywords": [],
