--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
     "start": "node dist/src/index.js",
-    "build": "rimraf dist tsconfig.tsbuildinfo && tsc",
+    "build": "rimraf dist tsconfig.tsbuildinfo && npx tsc",
     "format": "npx prettier src --write"
   },
   "keywords": [],
