--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/src/index.js",
-    "build": "rimraf dist && tsc -p .",
+    "start": "nodemon src/index.ts",
+    "build": "rimraf dist && tsc",
     "postinstall": "prisma generate",
     "format": "npx prettier src --write"
   },
