--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,1 @@
-{
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-}
+{ "version": 2, "builds": [ { "src": "src/index.ts", "use": "@vercel/node" } ], "routes": [ { "src": "/(.*)", "dest": "src/index.ts" } ] }
