update build script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node ./src/index.ts",
-    "build": "tsc && prisma migrate deploy",
-    "start": "node dist/index.js"
+    "build": "prisma generate && tsc",
+    "start": "prisma migrate deploy && node dist/index.js"
   },
   "keywords": [],
   "author": "",
